--- a/main.html
+++ b/main.html
@@ -306,7 +306,7 @@
 <div class="row mt-5 bg-custom-light-gray rounded">
   <div class="col-lg-6">
     <video controls class="landing-video rounded" poster="6efb2c6cabf9f9930b7e4e581e3e5a2e.jpg">
-      <source src="VID20231227105801.mp4" type="video/mp4" style="transform: 0.9s; transition: transform 0.3s;">
+      <source src="vid20231227105801_UTEQMqRU.mp4" type="video/mp4" style="transform: 0.9s; transition: transform 0.3s;">
       Ваш браузер не поддерживает тег video.
     </video>
   </div>
