--- a/main.html
+++ b/main.html
@@ -312,7 +312,7 @@
   </div>
   <div class="col-lg-6">
     <video controls class="landing-video rounded" poster="a01be3d06a4b95baf81ffc3723b7da2c.jpg">
-      <source src="VID20231227111004.mp4" type="video/mp4" style="transform: 0.9s; transition: transform 0.3s;">
+      <source src="vid20231227111004_Zk9GsrWe.mp4" type="video/mp4" style="transform: 0.9s; transition: transform 0.3s;">
       Ваш браузер не поддерживает тег video.
     </video>
   </div>
