--- a/main.html
+++ b/main.html
@@ -67,38 +67,39 @@
 <body>
 
   <nav class="navbar navbar-expand-lg navbar-dark">
-    <div class="container">
-      <a class="navbar-brand" href="#"><img src="https://cdn3.iconfinder.com/data/icons/logos-and-brands-adobe/512/272_Raspberry_Pi-512.png" alt="Искусство лого">Constantine electronics.inc</a>
-      <button class="navbar-toggler glare-effect" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a class="nav-link glare-effect rounded" href="main.html" style="background-color: #1781eb; color: white;">Главная</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link glare-effect rounded" href="action.html" style="background-color: #1781eb; color: white;">Акции</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link glare-effect rounded" href="form_submission_page.html" style="background-color: #1781eb; color: white;">Обратная связь</a>
-          </li>
-        </ul>
-        <div class="d-lg-none">
-          <div class="dropdown">
-            <button class="btn btn-secondary dropdown-toggle" type="button" id="responsiveDropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Меню
-            </button>
-            <div class="dropdown-menu" aria-labelledby="responsiveDropdownMenuButton">
-              <a class="dropdown-item" href="main.html">Главная</a>
-              <a class="dropdown-item" href="action.html">Акции</a>
-              <a class="dropdown-item" href="form_submission_page.html">Обратная связь</a>
-            </div>
+  <div class="container">
+    <a class="navbar-brand" href="#"><img src="https://cdn3.iconfinder.com/data/icons/logos-and-brands-adobe/512/272_Raspberry_Pi-512.png" alt="Искусство лого">Constantine electronics.inc</a>
+    <button class="navbar-toggler glare-effect" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item flex-fill">
+          <a class="nav-link glare-effect rounded" href="main.html" style="background-color: #1781eb; color: white;">Главная</a>
+        </li>
+        <li class="nav-item flex-fill">
+          <a class="nav-link glare-effect rounded" href="action.html" style="background-color: #1781eb; color: white;">Акции</a>
+        </li>
+        <li class="nav-item flex-fill">
+          <a class="nav-link glare-effect rounded" href="form_submission_page.html" style="background-color: #1781eb; color: white;">Обратная связь</a>
+        </li>
+      </ul>
+      <div class="d-lg-none">
+        <div class="dropdown">
+          <button class="btn btn-secondary dropdown-toggle" type="button" id="responsiveDropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Меню
+          </button>
+          <div class="dropdown-menu" aria-labelledby="responsiveDropdownMenuButton">
+            <a class="dropdown-item" href="main.html">Главная</a>
+            <a class="dropdown-item" href="action.html">Акции</a>
+            <a class="dropdown-item" href="form_submission_page.html">Обратная связь</a>
           </div>
         </div>
       </div>
     </div>
-  </nav>
+  </div>
+</nav>
+
   
 <div class="p-5 text-center parallax-section rounded glare-effect d-flex justify-content-center align-items-center flex-column">
   <h2 class="display-4">Отдел товаров</h2>
@@ -229,7 +230,7 @@
     <div class="col-lg-4">
       <div class="card text-center">
         <div class="card-body d-flex flex-column justify-content-center align-items-center">
-          <h5 class="card-title">Базовый план</h5>
+          <h5 class="card-title">Взять продукт в аренду:</h5>
           <p class="card-text">$19.99/месяц</p>
         </div>
       </div>
@@ -238,7 +239,7 @@
     <div class="col-lg-4">
       <div class="card text-center">
         <div class="card-body d-flex flex-column justify-content-center align-items-center">
-          <h5 class="card-title">Стандартный план</h5>
+          <h5 class="card-title">Взять продукт в рассрочку:</h5>
           <p class="card-text">$39.99/месяц</p>
         </div>
       </div>
@@ -247,8 +248,8 @@
     <div class="col-lg-4">
       <div class="card text-center">
         <div class="card-body d-flex flex-column justify-content-center align-items-center">
-          <h5 class="card-title">Премиум план</h5>
-          <p class="card-text">$59.99/месяц</p>
+          <h5 class="card-title">Полноценная покупка:</h5>
+          <p class="card-text">$59.99</p>
         </div>
       </div>
     </div>
@@ -257,7 +258,7 @@
   
 
   <div class="col-lg-6">
-    <div class="row mt-5 bg-custom-light-gray rounded">
+    <div class="row mt-5 bg-custom-light-gray rounded justify-content-center">
       <div class="col-lg-12">
         <h2 class="text-center mb-4 card-title">Наши контакты:</h2>
       </div>
@@ -286,7 +287,7 @@
     <div class="col-lg-4 rounded">
         <div class="rounded p-3">
             <img src="Screenshot_2024-01-03-21-03-26-91_40deb401b9ffe8e1df2f1cc5ba480b12.jpg" alt="Продукт" class="img-fluid landing-photo rounded" style="height: 200px;">
-            <h5 class="mt-2">Схема продукции наглядно</h5>
+            <h5 class="mt-2">Схема эмулятора наглядно</h5>
         </div>
     </div>
     <div class="col-lg-4 rounded">
