--- a/main.html
+++ b/main.html
@@ -65,9 +65,13 @@
 
 .nav-link-custom {
   width: 100%; /* Set the desired width for all navigation links */
-  text-align: center; /* Center the text within the button */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
   box-sizing: border-box; /* Include padding and border in the element's total width and height */
 }
+
   </style>
 <body>
 
@@ -78,15 +82,15 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav ms-auto">
+   <ul class="navbar-nav ms-auto">
   <li class="nav-item">
-    <a class="nav-link nav-link-custom glare-effect rounded" href="main.html" style="background-color: #1781eb; color: white;">Главная</a>
+    <a class="nav-link nav-link-custom glare-effect rounded" href="main.html">Главная</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link nav-link-custom glare-effect rounded" href="action.html" style="background-color: #1781eb; color: white;">Акции</a>
+    <a class="nav-link nav-link-custom glare-effect rounded" href="action.html">Акции</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link nav-link-custom glare-effect rounded" href="form_submission_page.html" style="background-color: #1781eb; color: white;">Обратная связь</a>
+    <a class="nav-link nav-link-custom glare-effect rounded" href="form_submission_page.html">Обратная связь</a>
   </li>
 </ul>
       <div class="d-lg-none">
