--- a/main.html
+++ b/main.html
@@ -71,6 +71,9 @@
   text-align: center;
   box-sizing: border-box; /* Include padding and border in the element's total width and height */
 }
+  justify-content-center {
+    justify-content: center;
+}
 
   </style>
 <body>
