--- a/main.html
+++ b/main.html
@@ -274,28 +274,23 @@
   <div class="col-lg-12">
     <h2 class="text-center mb-4 card-title">Наши контакты:</h2>
   </div>
-  <div class="col-lg-6 d-flex justify-content-center"> <!-- Add these classes -->
-    <div class="card">
-      <div class="card-body">
-        <p class="card-text">
-          <p class="contact-info">Почта: mamontovkostya8@gmail.com</p>
-          <p class="contact-info">Телефон: +1 (123) 456-7890</p>
-          <p class="contact-info">Адрес: Улица Шевцова 23, Усть-Кузьминск, Российская федерация</p>
-        </p><p class="contact-info">Адрес: Улица Шевцова 23, Усть-Кузьминск, Российская федерация</p>
-            </p>
-            <a href="form_submission_page.html" class="btn btn-primary glare-effect mt-3">Связаться с нами</a>
-          </div>
-        </div>
+ <div class="col-lg-6 d-flex justify-content-center text-center">
+  <div class="card">
+    <div class="card-body">
+      <p class="card-text">
+        <p class="contact-info">Почта: mamontovkostya8@gmail.com</p>
+        <p class="contact-info">Телефон: +1 (123) 456-7890</p>
+        <p class="contact-info">Адрес: Улица Шевцова 23, Усть-Кузьминск, Российская федерация</p>
+      </p>
+      <a href="form_submission_page.html" class="btn btn-primary glare-effect mt-3">Связаться с нами</a>
       </div>
     </div>
   </div>
-  
-  
-
+ </div>
+</div>
     <div class="col-lg-6">
   </div>
 </div>
-
   <div class="row mt-5 bg-custom-light-gray rounded">
     <div class="col-lg-4 rounded">
         <div class="rounded p-3">
