--- a/main.html
+++ b/main.html
@@ -269,7 +269,7 @@
   
   
 
-  <div class="col-lg-6 justify-content-center">
+  <div class="col-lg-6 mx-auto">
     <div class="row mt-5 bg-custom-light-gray rounded justify-content-center">
   <div class="col-lg-12">
     <h2 class="text-center mb-4 card-title">Наши контакты:</h2>
