--- a/main.html
+++ b/main.html
@@ -87,13 +87,13 @@
     <div class="collapse navbar-collapse" id="navbarNav">
    <ul class="navbar-nav ms-auto">
   <li class="nav-item">
-    <a class="nav-link nav-link-custom glare-effect rounded" href="main.html">Главная</a>
+    <a class="nav-link nav-link-custom glare-effect rounded" href="main.html" style="background-color:#1781eb;">Главная</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link nav-link-custom glare-effect rounded" href="action.html">Акции</a>
+    <a class="nav-link nav-link-custom glare-effect rounded" href="action.html" style="background-color:#1781eb;">Акции</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link nav-link-custom glare-effect rounded" href="form_submission_page.html">Обратная связь</a>
+    <a class="nav-link nav-link-custom glare-effect rounded" href="form_submission_page.html" style="background-color:#1781eb;">Обратная связь</a>
   </li>
 </ul>
       <div class="d-lg-none">
