--- a/main.html
+++ b/main.html
@@ -270,11 +270,11 @@
   
 
   <div class="col-lg-6 mx-auto">
-    <div class="row mt-5 bg-custom-light-gray rounded justify-content-center">
+    <div class="row mt-5 bg-custom-light-gray rounded">
   <div class="col-lg-12">
     <h2 class="text-center mb-4 card-title">Наши контакты:</h2>
   </div>
- <div class="col-lg-6 d-flex justify-content-center text-center">
+ <div class="col-lg-6 d-flex">
   <div class="card">
     <div class="card-body">
       <p class="card-text">
