--- a/main.html
+++ b/main.html
@@ -271,7 +271,7 @@
 
   <div class="col-lg-6 mx-auto">
     <div class="row mt-5 bg-custom-light-gray rounded">
-  <div class="col-lg-12">
+  <div class="col-lg-12 justify-content-center">
     <h2 class="text-center mb-4 card-title">Наши контакты:</h2>
   </div>
  <div class="col-lg-6 d-flex">
