--- a/main.html
+++ b/main.html
@@ -270,7 +270,7 @@
   
 
   <div class="col-lg-6 mx-auto">
-    <div class="row mt-5 bg-custom-light-gray rounded">
+    <div class="row mt-5 bg-custom-light-gray rounded justify-content-center">
   <div class="col-lg-12 justify-content-center text-center">
     <h2 class="text-center mb-4 card-title justify-content-center">Наши контакты:</h2>
   </div>
