--- a/main.html
+++ b/main.html
@@ -93,7 +93,7 @@
     <a class="nav-link nav-link-custom glare-effect rounded" href="action.html" style="background-color:#1781eb; color: white">Акции</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link nav-link-custom glare-effect rounded" href="form_submission_page.html" style="background-color:#1781eb color: white;">Обратная связь</a>
+    <a class="nav-link nav-link-custom glare-effect rounded" href="form_submission_page.html" style="background-color:#1781eb; color: white;">Обратная связь</a>
   </li>
 </ul>
       <div class="d-lg-none">
