--- a/main.html
+++ b/main.html
@@ -64,13 +64,15 @@
 }
 
 .nav-link-custom {
-  width: 100%; /* Set the desired width for all navigation links */
+  width: 100%;
+  min-width: 120px; /* Set a fixed minimum width for all navigation links */
   display: flex;
   align-items: center;
   justify-content: center;
   text-align: center;
-  box-sizing: border-box; /* Include padding and border in the element's total width and height */
+  box-sizing: border-box;
 }
+  
   justify-content-center {
     justify-content: center;
 }
