--- a/action.html
+++ b/action.html
@@ -11,7 +11,7 @@
 
     <style>
         body {
-            background-image: url()
+            background-image: url("https://i.pinimg.com/originals/3a/44/e2/3a44e2a49066e2a6fd4df497d098c32b.jpg")
             margin: 0;
             padding: 0;
         }
