--- a/action.html
+++ b/action.html
@@ -35,6 +35,15 @@
         max-width: 600px; /* Установите максимальную ширину контейнера */
         margin: 45px auto; /* Выровняйте по центру по вертикали и горизонтали */
     }
+.nav-link-custom {
+      width: 100%;
+      min-width: 120px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      box-sizing: border-box;
+    }
     </style>
 </head>
 
@@ -52,15 +61,15 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link glare-effect" style="background-color: #1781eb; color: white;"
+                        <a class="nav-link-custom glare-effect" style="background-color: #1781eb; color: white;"
                             href="main.html">Главная</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link glare-effect" style="background-color: #1781eb; color: white;"
+                        <a class="nav-link-custom glare-effect" style="background-color: #1781eb; color: white;"
                             href="action.html">Акции</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link glare-effect" style="background-color: #1781eb; color: white;"
+                        <a class="nav-link-custom glare-effect" style="background-color: #1781eb; color: white;"
                             href="form_submission_page.html">Обратная связь</a>
                     </li>
                 </ul>
