--- a/action.html
+++ b/action.html
@@ -62,15 +62,15 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link glare-effect" style="background-color: #1781eb; color: white;"
+                        <a class="nav-link-custom glare-effect" style="background-color: #1781eb; color: white;"
                             href="main.html">Главная</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link glare-effect" style="background-color: #1781eb; color: white;"
+                        <a class="nav-link-custom glare-effect" style="background-color: #1781eb; color: white;"
                             href="action.html">Акции</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link glare-effect" style="background-color: #1781eb; color: white;"
+                        <a class="nav-link_custom glare-effect" style="background-color: #1781eb; color: white;"
                             href="form_submission_page.html">Обратная связь</a>
                     </li>
                 </ul>
