--- a/action.html
+++ b/action.html
@@ -45,6 +45,19 @@
       text-align: center;
       box-sizing: border-box;
     }
+
+     #button-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-top: 20px;
+    }
+
+    #button {
+      border-radius: 0.25rem;
+      display: inline-block;
+      margin-top: 15px;
+    }
     </style>
 </head>
 
