--- a/action.html
+++ b/action.html
@@ -35,6 +35,21 @@
         max-width: 600px; /* Установите максимальную ширину контейнера */
         margin: 45px auto; /* Выровняйте по центру по вертикали и горизонтали */
     }
+.navbar-nav {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.nav-link-custom {
+    flex: 1;
+    text-align: center;
+}
+
+.nav-item {
+    flex: 1;
+}
+
     </style>
 </head>
 
