--- a/action.html
+++ b/action.html
@@ -36,6 +36,23 @@
         margin: 45px auto; /* Выровняйте по центру по вертикали и горизонтали */
         }
 
+        .navbar-nav {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.navbar-nav .nav-item {
+    flex: 1;
+    text-align: center;
+}
+
+.navbar-nav .nav-link-custom {
+    width: 100%;
+    box-sizing: border-box;
+}
+
+
     </style>
 </head>
 
