--- a/action.html
+++ b/action.html
@@ -35,7 +35,7 @@
         margin: 45px auto; /* Выровняйте по центру по вертикали и горизонтали */
         }
 
-  .navbar-nav {
+.navbar-nav {
     display: flex;
     justify-content: flex-end; /* Перемещаем элементы вправо */
     align-items: flex-start; /* Перемещаем элементы вверх */
@@ -44,12 +44,12 @@
 
 .navbar-nav .nav-item {
     flex: 0 0 auto; /* Отключаем увеличение ширины элемента */
-    margin-left: 10px; /* Добавляем немного отступа между кнопками */
+    margin-left: 15px; /* Добавляем немного больший отступ между кнопками */
 }
 
 .navbar-nav .nav-link-custom {
-    padding: 10px 15px; /* Увеличиваем отступы внутри кнопок */
-    font-size: 16px; /* Увеличиваем размер шрифта */
+    padding: 15px 20px; /* Увеличиваем отступы внутри кнопок */
+    font-size: 18px; /* Увеличиваем размер шрифта */
 }
 
     </style>
