--- a/action.html
+++ b/action.html
@@ -77,7 +77,7 @@
                             href="action.html">Акции</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link_custom glare-effect" style="background-color: #1781eb; color: white;"
+                        <a class="nav-link-custom glare-effect" style="background-color: #1781eb; color: white;"
                             href="form_submission_page.html">Обратная связь</a>
                     </li>
                 </ul>
