--- a/action.html
+++ b/action.html
@@ -47,10 +47,15 @@
     margin-left: 15px; /* Добавляем немного больший отступ между кнопками */
 }
 
-.navbar-nav .nav-link-custom {
-    padding: 15px 20px; /* Увеличиваем отступы внутри кнопок */
-    font-size: 18px; /* Увеличиваем размер шрифта */
-}
+.navbar-nav .    .nav-link-custom {
+      width: 100%;
+      min-width: 120px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      box-sizing: border-box;
+    }
 
     </style>
 </head>
