--- a/form_submission_page.html
+++ b/form_submission_page.html
@@ -114,7 +114,7 @@
         <input type="text" name="message" id="message" class="form-control" style="border-radius: 0.25rem; display: inline-block;">
       </div>
       <div class="field">
-        <label for="reply_to" style="color: black; font-size: 1.5rem;">Оставьте отзыв:</label>
+        <label for="reply_to" style="color: white; font-size: 1.5rem;">Оставьте отзыв:</label>
         <input type="text" name="reply_to" id="reply_to" class="form-control" style="border-radius: 0.25rem; display: inline-block;">
       </div>
       
