--- a/action.html
+++ b/action.html
@@ -42,14 +42,14 @@
     height: 100%; /* Занимаем 100% высоты родительского контейнера (navbar) */
 }
 
-.navbar-nav .nav-item {
-    flex: 0 0 auto; /* Отключаем увеличение ширины элемента */
-    margin-left: 15px; /* Добавляем немного больший отступ между кнопками */
-}
+   .navbar-nav .nav-item {
+        flex: 0 0 auto;
+        margin-left: 15px;
+    }
 
-.navbar-nav .    .nav-link-custom {
+.navbar-nav .nav-link-custom {
       width: 100%;
-      min-width: 120px;
+      min-width: 150px;
       display: flex;
       align-items: center;
       justify-content: center;
