--- a/action.html
+++ b/action.html
@@ -49,6 +49,7 @@
 
 .navbar-nav .nav-link-custom {
       width: 100%;
+      min-height: 75px;
       min-width: 150px;
       display: flex;
       align-items: center;
