--- a/action.html
+++ b/action.html
@@ -51,6 +51,7 @@
       width: 100%;
       min-width: 150px;
       display: flex;
+      height: 50px;
       align-items: center;
       justify-content: center;
       text-align: center;
