--- a/action.html
+++ b/action.html
@@ -48,15 +48,16 @@
     }
 
 .navbar-nav .nav-link-custom {
-      width: 100%;
-      min-width: 150px;
-      display: flex;
-      height: 25px;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-      box-sizing: border-box;
-    }
+    width: 100%;
+    min-width: 120px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    box-sizing: border-box;
+    height: 50px; /* Настройте высоту кнопок по вашему вкусу */
+}
+
 
     </style>
 </head>
