--- a/action.html
+++ b/action.html
@@ -8,89 +8,107 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="estilos.css">
     <link rel="stylesheet" href="styles.css">
-
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-        }
-
-        .navbar {
-            width: 100%;
-            z-index: 1000;
-        }
-
-        .navbar-brand img {
-            max-height: 40px;
-            margin-right: 10px;
-        }
-
-        .glare-effect {
-            box-shadow: 0 0 10px rgba(255, 255, 255, 0.8);
-            border-radius: 10px; /* Выберите значение, которое вам нравится */
-        }
-
-        .content-container {
-        max-width: 600px; /* Установите максимальную ширину контейнера */
-        margin: 45px auto; /* Выровняйте по центру по вертикали и горизонтали */
-        }
-
-.navbar-nav {
-    display: flex;
-    justify-content: flex-end; /* Перемещаем элементы вправо */
-    align-items: flex-start; /* Перемещаем элементы вверх */
-    height: 100%; /* Занимаем 100% высоты родительского контейнера (navbar) */
-}
-
-   .navbar-nav .nav-item {
-        flex: 0 0 auto;
-        margin-left: 15px;
+<style>
+    body {
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
     }
 
-.navbar-nav .nav-link-custom {
-    width: 100%;
-    min-width: 140px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    box-sizing: border-box;
-    height: 50px; /* Настройте высоту кнопок по вашему вкусу */
-}
+    .flex-grow {
+      flex-grow: 1;
+    }
 
+    #button-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-top: 20px;
+    }
 
-    </style>
-</head>
+    #button {
+      border-radius: 0.25rem;
+      display: inline-block;
+      margin-top: 15px;
+    }
 
+    .parallax-section,
+    .navbar,
+    .navbar-toggler,
+    .navbar-toggler-icon,
+    .nav-link,
+    .footer,
+    .btn {
+      transition: transform 0.3s ease-in-out;
+    }
+
+    .parallax-section:hover,
+    .navbar-toggler:hover,
+    .navbar-toggler-icon:hover,
+    .nav-link:hover,
+    .footer:hover,
+    .btn:hover {
+      transform: scale(1.1);
+    }
+
+    .navbar-brand {
+      transition: none;
+    }
+
+    .landing-video {
+      max-height: 200px;
+    }
+
+    .row:not(:last-child) {
+      margin-bottom: 30px;
+    }
+
+    .nav-link-custom {
+      width: 100%;
+      min-width: 120px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      box-sizing: border-box;
+    }
+
+  </style>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark">
-        <div class="container">
-            <a class="navbar-brand" href="#">
-                <img src="https://cdn3.iconfinder.com/data/icons/logos-and-brands-adobe/512/272_Raspberry_Pi-512.png"
-                    alt="Искусство лого">Constantine electronics.inc
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+
+  <nav class="navbar navbar-expand-lg navbar-dark">
+    <div class="container">
+      <a class="navbar-brand" href="#"><img src="https://cdn3.iconfinder.com/data/icons/logos-and-brands-adobe/512/272_Raspberry_Pi-512.png" alt="Искусство лого">Constantine electronics.inc</a>
+      <button class="navbar-toggler glare-effect" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link nav-link-custom glare-effect rounded" href="main.html" style="background-color:#1781eb; color: white;">Главная</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link nav-link-custom glare-effect rounded" href="action.html" style="background-color:#1781eb; color: white;">Акции</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link nav-link-custom glare-effect rounded" href="form_submission_page.html" style="background-color: #1781eb; color: white;">Обратная связь</a>
+          </li>
+        </ul>
+        <div class="d-lg-none">
+          <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="responsiveDropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Меню
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link-custom glare-effect" style="background-color: #1781eb; color: white;"
-                            href="main.html">Главная</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link-custom glare-effect" style="background-color: #1781eb; color: white;"
-                            href="action.html">Акции</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link-custom glare-effect" style="background-color: #1781eb; color: white;"
-                            href="form_submission_page.html">Обратная связь</a>
-                    </li>
-                </ul>
+            <div class="dropdown-menu" aria-labelledby="responsiveDropdownMenuButton">
+              <a class="dropdown-item" href="main.html">Главная</a>
+              <a class="dropdown-item" href="action.html">Акции</a>
+              <a class="dropdown-item" href="form_submission_page.html">Обратная связь</a>
             </div>
+          </div>
         </div>
-    </nav>
+      </div>
+    </div>
+  </nav>
 
     <div class="p-5 text-center parallax-section rounded glare-effect">
         <h2 class="display-4">Отдел акций</h2>
