--- a/action.html
+++ b/action.html
@@ -9,11 +9,12 @@
     <link rel="stylesheet" href="estilos.css">
     <link rel="stylesheet" href="styles.css">
 <style>
-    body {
-      display: flex;
-      flex-direction: column;
-      min-height: 100vh;
-    }
+        body {
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+            margin: 0; /* Add this line to remove default margin */
+        }
 
     .flex-grow {
       flex-grow: 1;
@@ -53,6 +54,7 @@
 
     .navbar-brand {
       transition: none;
+      margin-right: auto;
     }
 
     .landing-video {
@@ -74,6 +76,22 @@
       box-sizing: border-box;
     }
 
+      .navbar {
+            margin-bottom: 0; /* Add this line to remove default margin for navbar */
+        }
+
+      .container {
+            display: flex;
+            align-items: center;
+        }
+
+      .navbar-nav {
+            margin-left: auto; /* Push the navbar items to the top right */
+        }
+
+     .parallax-section {
+            margin-top: -56px; /* Adjust this value based on your design */
+        }
   </style>
 <body>
 
