--- a/action.html
+++ b/action.html
@@ -13,7 +13,24 @@
             display: flex;
             flex-direction: column;
             min-height: 100vh;
-            margin: 0; /* Add this line to remove default margin */
+            margin: 0;
+        }
+
+        .navbar {
+            margin-bottom: 0;
+        }
+
+        .container {
+            display: flex;
+            align-items: center;
+        }
+
+        .navbar-brand {
+            margin-right: auto;
+        }
+
+        .navbar-nav {
+            margin-left: auto;
         }
 
     .flex-grow {
@@ -76,22 +93,6 @@
       box-sizing: border-box;
     }
 
-      .navbar {
-            margin-bottom: 0; /* Add this line to remove default margin for navbar */
-        }
-
-      .container {
-            display: flex;
-            align-items: center;
-        }
-
-      .navbar-nav {
-            margin-left: auto; /* Push the navbar items to the top right */
-        }
-
-     .parallax-section {
-            margin-top: -56px; /* Adjust this value based on your design */
-        }
   </style>
 <body>
 
