--- a/action.html
+++ b/action.html
@@ -33,6 +33,10 @@
             margin-left: auto;
         }
 
+     .parallax-section {
+            margin-top: -56px; /* Adjust this value based on your design */
+        }
+
     .flex-grow {
       flex-grow: 1;
     }
