--- a/action.html
+++ b/action.html
@@ -54,10 +54,15 @@
     }
 
     .nav-link-custom {
-            width: 120px; /* Set the desired width for all nav-link buttons */
-            text-align: center;
-            box-sizing: border-box;
-        }
+      height: 50px;
+      width: 100%;
+      min-width: 120px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      box-sizing: border-box;
+    }
     </style>
 </head>
 
