--- a/action.html
+++ b/action.html
@@ -8,49 +8,59 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="estilos.css">
     <link rel="stylesheet" href="styles.css">
+<style>
+    body {
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+    }
 
-    <style>
-          body {
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
-            margin: 0; /* Add this line to remove default margin */
-        }
+    .flex-grow {
+      flex-grow: 1;
+    }
 
-        .navbar {
-            margin-bottom: 0; /* Add this line to remove default margin for navbar */
-        }
+    #button-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-top: 20px;
+    }
 
-        .container {
-            display: flex;
-            align-items: center;
-        }
+    #button {
+      border-radius: 0.25rem;
+      display: inline-block;
+      margin-top: 15px;
+    }
 
-        .navbar-brand {
-            margin-right: auto; /* Push the navbar brand and logo to the top left */
-        }
+    .parallax-section,
+    .navbar,
+    .navbar-toggler,
+    .navbar-toggler-icon,
+    .nav-link,
+    .footer,
+    .btn {
+      transition: transform 0.3s ease-in-out;
+    }
 
-        .navbar-nav {
-            margin-left: auto; /* Push the navbar items to the top right */
-        }
+    .parallax-section:hover,
+    .navbar-toggler:hover,
+    .navbar-toggler-icon:hover,
+    .nav-link:hover,
+    .footer:hover,
+    .btn:hover {
+      transform: scale(1.1);
+    }
 
-        .parallax-section {
-            margin-top: -56px; /* Adjust this value based on your design */
-        }
+    .navbar-brand {
+      transition: none;
+    }
 
-        .navbar-brand img {
-            max-height: 40px;
-            margin-right: 10px;
-        }
+    .landing-video {
+      max-height: 200px;
+    }
 
-        .glare-effect {
-            box-shadow: 0 0 10px rgba(255, 255, 255, 0.8);
-            border-radius: 10px; /* Выберите значение, которое вам нравится */
-        }
-
-        .content-container {
-        max-width: 600px; /* Установите максимальную ширину контейнера */
-        margin: 45px auto; /* Выровняйте по центру по вертикали и горизонтали */
+    .row:not(:last-child) {
+      margin-bottom: 30px;
     }
 
     .nav-link-custom {
@@ -63,38 +73,43 @@
       text-align: center;
       box-sizing: border-box;
     }
-    </style>
-</head>
 
+  </style>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark">
-        <div class="container">
-            <a class="navbar-brand" href="#">
-                <img src="https://cdn3.iconfinder.com/data/icons/logos-and-brands-adobe/512/272_Raspberry_Pi-512.png"
-                    alt="Искусство лого">Constantine electronics.inc
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+
+  <nav class="navbar navbar-expand-lg navbar-dark">
+    <div class="container">
+      <a class="navbar-brand" href="#"><img src="https://cdn3.iconfinder.com/data/icons/logos-and-brands-adobe/512/272_Raspberry_Pi-512.png" alt="Искусство лого">Constantine electronics.inc</a>
+      <button class="navbar-toggler glare-effect" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link nav-link-custom glare-effect rounded" href="main.html" style="background-color:#1781eb; color: white;">Главная</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link nav-link-custom glare-effect rounded" href="action.html" style="background-color:#1781eb; color: white;">Акции</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link nav-link-custom glare-effect rounded" href="form_submission_page.html" style="background-color: #1781eb; color: white;">Обратная связь</a>
+          </li>
+        </ul>
+        <div class="d-lg-none">
+          <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="responsiveDropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Меню
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link-custom glare-effect" style="background-color: #1781eb; color: white;"
-                            href="main.html">Главная</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link-custom glare-effect" style="background-color: #1781eb; color: white;"
-                            href="action.html">Акции</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link-custom glare-effect" style="background-color: #1781eb; color: white;"
-                            href="form_submission_page.html">Обратная связь</a>
-                    </li>
-                </ul>
+            <div class="dropdown-menu" aria-labelledby="responsiveDropdownMenuButton">
+              <a class="dropdown-item" href="main.html">Главная</a>
+              <a class="dropdown-item" href="action.html">Акции</a>
+              <a class="dropdown-item" href="form_submission_page.html">Обратная связь</a>
             </div>
+          </div>
         </div>
-    </nav>
+      </div>
+    </div>
+  </nav>
 
     <div class="p-5 text-center parallax-section rounded glare-effect">
         <h2 class="display-4">Отдел акций</h2>
@@ -124,4 +139,3 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
-</html>
