--- a/action.html
+++ b/action.html
@@ -69,7 +69,7 @@
       min-width: 130px;
       display: flex;
       align-items: center;
-      justify-content: right;
+      justify-content: center;
       text-align: center;
       box-sizing: border-box;
     }
