--- a/action.html
+++ b/action.html
@@ -74,6 +74,13 @@
       box-sizing: border-box;
     }
 
+     #logo-container {
+      position: absolute;
+      top: 0;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+
   </style>
 <body>
 
