--- a/action.html
+++ b/action.html
@@ -74,9 +74,9 @@
       box-sizing: border-box;
     }
 
-     #logo-container {
+      #logo-container {
       position: absolute;
-      top: 0;
+      top: 20px; /* Adjust this value to move it higher */
       left: 50%;
       transform: translateX(-50%);
     }
