--- a/action.html
+++ b/action.html
@@ -74,10 +74,10 @@
       box-sizing: border-box;
     }
 
-      #logo-container {
+ #logo-container {
       position: absolute;
-      top: 20px; /* Adjust this value to move it higher */
-      left: 100%;
+      top: 0;
+      left: 50%;
       transform: translateX(-50%);
     }
 
