--- a/action.html
+++ b/action.html
@@ -74,11 +74,10 @@
       box-sizing: border-box;
     }
 
- #logo-container {
+  #logo-container {
       position: absolute;
       top: 0;
-      left: 50%;
-      transform: translateX(-50%);
+      left: 0;
     }
 
   </style>
