--- a/action.html
+++ b/action.html
@@ -75,6 +75,7 @@
     }
 
  #logo-container {
+      position: absolute;
       top: 60px; /* Adjust this value to move it higher */
       left: 0;
     }
