--- a/action.html
+++ b/action.html
@@ -83,6 +83,21 @@
  .navbar {
     height: 60px; /* Adjust the height as needed */
   }
+
+  /* Add this style to move the navbar buttons to the top */
+  .navbar-nav {
+    margin-top: 10px; /* Adjust the top margin as needed */
+  }
+
+  /* Add this style to remove the default bottom margin on the navbar items */
+  .navbar-nav .nav-item {
+    margin-bottom: 0;
+  }
+
+  /* Add this style to adjust the navbar button padding and alignment */
+  .navbar-nav .nav-link {
+    padding: 5px 15px; /* Adjust padding as needed */
+  }
   </style>
 <body>
 
