--- a/action.html
+++ b/action.html
@@ -103,7 +103,7 @@
     }
 
     .navbar-nav {
-        margin-right: 20px; /* Adjust this value as needed */
+        margin-right: auto; /* Move the navbar-nav to the right as much as possible */
     }
   </style>
 <body>
