--- a/action.html
+++ b/action.html
@@ -103,7 +103,7 @@
     }
 
     .navbar-nav {
-        margin-right: auto; /* Move the navbar-nav to the right */
+        margin-right: 100%; /* Move the navbar-nav to the right */
     }
 
   </style>
