--- a/action.html
+++ b/action.html
@@ -103,7 +103,8 @@
     }
 
     .navbar-nav {
-        margin-right: 20px; /* Adjust this value as needed */
+        margin-left: auto; /* Move the navbar-nav to the right */
+        margin-right: 50px; /* Adjust this value as needed */
     }
 
   </style>
