--- a/action.html
+++ b/action.html
@@ -73,6 +73,7 @@
       text-align: center;
       box-sizing: border-box;
     }
+    
     body {
         display: flex;
         flex-direction: column;
@@ -102,14 +103,8 @@
     }
 
     .navbar-nav {
-        margin-left: auto;
+        margin-left: auto; /* Move the navbar-nav to the right */
     }
-
-    .navbar-nav .nav-item {
-        margin-right: 20px; /* Adjust this value as needed */
-    }
-
-    /* Add any additional styles you need */
 </style>
 <body>
 
