--- a/form_submission_page.html
+++ b/form_submission_page.html
@@ -102,6 +102,10 @@
     .navbar-nav {
         margin-left: auto; /* Move the navbar-nav to the right */
     }
+
+    .navbar-nav .nav-link {
+    padding: 10px; /* Adjust the padding as needed */
+}
   </style>
 </head>
 <body>
