--- a/form_submission_page.html
+++ b/form_submission_page.html
@@ -71,41 +71,42 @@
       font-size: 1.2rem;
     }
 
-        body {
-        display: flex;
-        flex-direction: column;
-        min-height: 100vh;
-        margin: 0;
-        padding: 0;
-    }
+  body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    margin: 0;
+    padding: 0;
+  }
 
-    .top-container {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 10px;
-        background-color: #1781eb;
-        color: white;
-        margin-top: -20px;
-    }
+  .top-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    background-color: #1781eb;
+    color: white;
+    margin-top: -20px;
+  }
 
-    .navbar {
-        margin-bottom: 0;
-    }
+  .navbar {
+    margin-bottom: 0;
+  }
 
-    .navbar-brand,
-    .navbar-nav {
-        margin: 0;
-        padding: 0;
-    }
+  .navbar-brand,
+  .navbar-nav {
+    margin: 0;
+    padding: 0;
+  }
 
-    .navbar-nav {
-        margin-left: auto; /* Move the navbar-nav to the right */
-    }
+  .navbar-nav {
+    margin-left: auto; /* Move the navbar-nav to the right */
+  }
 
-    .navbar-nav .nav-link {
-    padding: 10px; /* Adjust the padding as needed */
-}
+  .navbar-nav .nav-item {
+    flex: 1;
+    text-align: center;
+  }
   </style>
 </head>
 <body>
