--- a/form_submission_page.html
+++ b/form_submission_page.html
@@ -107,6 +107,12 @@
     flex: 1;
     text-align: center;
   }
+
+      .navbar-nav .nav-link {
+      /* Ensure equal width distribution for buttons */
+      flex: 1 1 auto;
+      text-align: center; /* Center text within buttons */
+    }
   </style>
 </head>
 <body>
