--- a/form_submission_page.html
+++ b/form_submission_page.html
@@ -108,9 +108,9 @@
     text-align: center;
   }
 
-    .navbar-nav .nav-link {
+  .navbar-nav .nav-link {
       /* Ensure equal width distribution for buttons */
-      width: 100%;
+      max-width: 100%;
       text-align: center; /* Center text within buttons */
     }
   </style>
