--- a/form_submission_page.html
+++ b/form_submission_page.html
@@ -71,11 +71,11 @@
       font-size: 1.2rem;
     }
 
-    .navbar-nav .nav-link {
-      /* Ensure equal width distribution for buttons */
+ .navbar-nav .nav-link {
       width: 100%;
-      text-align: center; /* Center text within buttons */
-      white-space: nowrap; /* Force text to wrap to next line if it is too long */
+      text-align: center;
+      white-space: nowrap;
+      padding: 0 20px;
     }
   </style>
 </head>
