--- a/form_submission_page.html
+++ b/form_submission_page.html
@@ -102,6 +102,11 @@
     .navbar-nav {
         margin-left: auto; /* Move the navbar-nav to the right */
     }
+
+    .navbar-nav .nav-link {
+  width: 100%;
+  text-align: center;
+}
   </style>
 </head>
 <body>
