--- a/form_submission_page.html
+++ b/form_submission_page.html
@@ -126,13 +126,13 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link glare-effect rounded" href="main.html" style="background-color: #1781eb; color: white;">Главная</a>
+            <a class="nav-link-custom glare-effect rounded" href="main.html" style="background-color: #1781eb; color: white;">Главная</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link glare-effect rounded" href="action.html" style="background-color: #1781eb; color: white;">Акции</a>
+            <a class="nav-link-custom glare-effect rounded" href="action.html" style="background-color: #1781eb; color: white;">Акции</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link glare-effect rounded" href="form_submission_page.html" style="background-color: #1781eb; color: white;">Обратная связь</a>
+            <a class="nav-link-custom glare-effect rounded" href="form_submission_page.html" style="background-color: #1781eb; color: white;">Обратная связь</a>
           </li>
         </ul>
       </div>    
