--- a/form_submission_page.html
+++ b/form_submission_page.html
@@ -113,6 +113,13 @@
     .navbar-nav {
         margin-left: auto; /* Move the navbar-nav to the right */
     }
+
+        .navbar-nav .nav-link-custom {
+      /* Ensure equal width for all buttons */
+      width: 100%;
+      flex-grow: 1;
+      text-align: center;
+    }
   </style>
 </head>
 <body>
