--- a/form_submission_page.html
+++ b/form_submission_page.html
@@ -113,32 +113,31 @@
     .navbar-nav {
         margin-left: auto; /* Move the navbar-nav to the right */
     }
-
-    .navbar-nav .nav-link-custom {
-      /* Ensure equal width for all buttons */
-      width: 100%;
-      flex-grow: 1;
-      text-align: center;
-    }
-
-    /* Add transition effect to buttons */
-    .navbar-nav .nav-link-custom:hover {
-      transform: scale(1.1);
-      transition: transform 0.3s ease-in-out;
-    }
   </style>
 </head>
 <body>
 
   <nav class="navbar navbar-expand-lg navbar-dark">
-    <div class="collapse navbar-collapse" id="navbarNav">
+    <div class="container">
+      <a class="navbar-brand" href="#"><img src="https://cdn3.iconfinder.com/data/icons/logos-and-brands-adobe/512/272_Raspberry_Pi-512.png" alt="Искусство лого">Constantine electronics.inc</a>
+      <button class="navbar-toggler glare-effect" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link-custom glare-effect rounded" href="main.html" style="background-color: #1781eb; color: white;">Главная</a></li>
-          <li class="nav-item"><a class="nav-link-custom glare-effect rounded" href="action.html" style="background-color: #1781eb; color: white;">Акции</a></li>
-          <li class="nav-item"><a class="nav-link-custom glare-effect rounded" href="form_submission_page.html" style="background-color: #1781eb; color: white;">Обратная связь</a></li>
+          <li class="nav-item">
+            <a class="nav-link-custom glare-effect rounded" href="main.html" style="background-color: #1781eb; color: white;">Главная</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link-custom glare-effect rounded" href="action.html" style="background-color: #1781eb; color: white;">Акции</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link-custom glare-effect rounded" href="form_submission_page.html" style="background-color: #1781eb; color: white;">Обратная связь</a>
+          </li>
         </ul>
-      </div>
-    </nav>
+      </div>    
+    </div>
+  </nav>
   
   <div class="p-5 text-center parallax-section rounded glare-effect">
     <h2 class="display-4">Форма обратной связи</h2>
